--- a/config/subsite.conf
+++ b/config/subsite.conf
@@ -1,7 +1,3 @@
-upstream app_server {
-    # for a TCP configuration
-    server gunicorn:5000 fail_timeout=0;
-}
 
 map $http_x_forwarded_proto $real_scheme {
     default $scheme;
@@ -46,6 +42,10 @@ server {
 
     # Proxy-pass ALL routes to gunicorn
     location / {
+        resolver 127.0.0.11 valid=30s;
+        set $upstream_server SED_UPSTREAM_SERVER;
+        set $upstream_port SED_UPSTREAM_PORT;
+
         proxy_set_header Host       $host;
         proxy_set_header Connection close;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -54,7 +54,7 @@ server {
         proxy_set_header X-Forwarded-Proto $real_scheme;
         proxy_set_header X-Forwarded-Prefix /;
 
-        proxy_pass http://app_server/;
+        proxy_pass http://$upstream_server:$upstream_port;
         proxy_redirect off;
     }
 
