--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -107,6 +107,9 @@ services:
       target: web
     container_name: ${COMPOSE_PROJECT_NAME}_nginx
     restart: always
+    environment:
+      UPSTREAM_SERVER: "gunicorn"
+      UPSTREAM_PORT: "5000"
     depends_on:
       - gunicorn
     networks:
@@ -128,3 +131,4 @@ volumes:
       device: ${PWD}/volumes/postgres
       o: bind
   uploads:
+
