--- a/config/manyFEWS.base.yml
+++ b/config/manyFEWS.base.yml
@@ -14,19 +14,15 @@ dependencies:
   - django-celery-beat
   - django-celery-results
   - django-crispy-forms
+  - django-environ
   - twilio
+  - tqdm
   - pygrib
   - gdal
-  # dev dependencies
-  - black=22.3.0
-  - pre-commit
-  - pytest
-  - retrying
-  - selenium==4.4.0
+  - gunicorn
+  - retrying=1.3.3
   - pip:
     - django-geojson==3.2.0
-    - django-environ
     - django-phonenumber-field[phonenumberslite]
     - git+https://github.com/mt-climate-office/Zentra-API
-    - tqdm
 prefix: /usr/local/Caskroom/miniconda/base/envs/ManyFEWS
