--- a/.github/workflows/run_unitTest_GenerateRiverFlows.yml
+++ b/.github/workflows/run_unitTest_GenerateRiverFlows.yml
@@ -48,7 +48,9 @@ jobs:
       -
         name: Install chromedriver
         uses: nanasess/setup-chromedriver@df428506cbc5d79cc069d20a689094d634c79e3e
-      - uses: conda-incubator/setup-miniconda@v2
+
+      -
+        uses: conda-incubator/setup-miniconda@v2
         with:
           miniforge-variant: Mambaforge
           miniforge-version: latest
