--- a/config/manyFEWS.base.yml
+++ b/config/manyFEWS.base.yml
@@ -22,7 +22,7 @@ dependencies:
   - gunicorn
   - retrying=1.3.3
   - pip:
-    - django-geojson==3.2.0
+    - django-geojson>=4.0.0
     - django-phonenumber-field[phonenumberslite]
     - git+https://github.com/mt-climate-office/Zentra-API
 prefix: /usr/local/Caskroom/miniconda/base/envs/ManyFEWS
