--- a/.github/workflows/run_unitTest_GenerateRiverFlows.yml
+++ b/.github/workflows/run_unitTest_GenerateRiverFlows.yml
@@ -116,3 +116,13 @@ jobs:
             exit 1
           fi
         working-directory: manyfews
+
+      -
+        name: Run tests and collect coverage
+        run: |
+            coverage run --source='.' manage.py test
+        working-directory: manyfews
+
+      -
+        name: Upload coverage reports to Codecov with GitHub Action
+        uses: codecov/codecov-action@v3
