--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -8,3 +8,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: psf/black@stable
+        with:
+          options: "--check"
+          src: "./manyfews"
+          version: "~= 22.3"
