--- a/.github/workflows/run_unitTest_GenerateRiverFlows.yml
+++ b/.github/workflows/run_unitTest_GenerateRiverFlows.yml
@@ -93,6 +93,7 @@ jobs:
           MAP_URL: ${{ secrets.MAP_URL }}
           EMAIL_HOST_USER: ${{ secrets.EMAIL_HOST_USER }}
           EMAIL_HOST_PASSWORD: ${{ secrets.EMAIL_HOST_PASSWORD }}
+          STATION_SN: ${{ vars.STATION_SN }}
           DISPLAY: :99
         run: coverage run --source='.' manage.py test
         working-directory: manyfews
