--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,8 @@ services:
     environment:
       RABBITMQ_DEFAULT_USER: ${RABBITMQ_DEFAULT_USER}
       RABBITMQ_DEFAULT_PASS: ${RABBITMQ_DEFAULT_PASS}
-    # ports:
-    #   - "5672:5672" # AMQP no TLS
+    ports:
+      - "127.0.0.1:5672:5672/tcp" # AMQP no TLS
     networks:
       - backend
 
