Fix django.template.exceptions.TemplateDoesNotExist: bootstrap4/uni_form.html

--- a/config/manyFEWS.base.yml
+++ b/config/manyFEWS.base.yml
@@ -24,5 +24,6 @@ dependencies:
   - pip:
     - django-geojson>=4.0.0
     - django-phonenumber-field[phonenumberslite]
+    - crispy-bootstrap4
     - git+https://github.com/mt-climate-office/Zentra-API
 prefix: /usr/local/Caskroom/miniconda/base/envs/ManyFEWS
