--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,89 +1,37 @@
 version: '3.6'
+# PRODUCTION OVERRIDE FILE
+# Move this file to docker-compose.override.yml in production!
 
 services:
 # Reverse proxy top-level container
 #
-  traefik:
-    container_name: ${COMPOSE_PROJECT_NAME}_traefik
-    depends_on:
-      - dockerproxy
-      - watchtower
-    image: traefik
-    ports:
-      - target: 80
-        published: 80
-        protocol: tcp
-        mode: host
-      - target: 443
-        published: 443
-        protocol: tcp
-        mode: host
-    expose:
-      - "8080"
-    restart: unless-stopped
-    volumes:
-      - ./config/traefik/acme.json:/acme.json
-      - ./config/traefik/traefik.toml:/traefik.toml
-      - ./config/traefik/conf/:/conf/:ro
-      - traefik:/tmp
-    labels:
-# Uncomment to enable Traefik Dashboard on https://traefik.hostname/
-#      - "traefik.enable=true"
-#      - "traefik.http.routers.api.entryPoints=https"
-#      - "traefik.http.routers.api.rule=Host(`traefik.${DOMAIN}`)"
-#      - "traefik.http.routers.api.service=api@backend"
-#      - "traefik.http.routers.api.middlewares=auth"
-#      - "traefik.http.middlewares.auth.basicauth.users=admin:$$2y$$12$$6TYH11Sv7F3b55fceRXR0O7v7jEOu75a5Ltg4Ui1lF63qF5N8Eyey"
-#      - "traefik.http.routers.api.tls=true"
-#      - "traefik.http.routers.api.tls.certresolver=letsencrypt"
-      - "com.centurylinklabs.watchtower.enable=true"
-    networks:
-      - default
-      - traefik
-
-  watchtower:
-    container_name: ${COMPOSE_PROJECT_NAME}_watchtower
-    command: --label-enable --cleanup --interval 300
-    image: containrrr/watchtower
-    labels:
-      - "com.centurylinklabs.watchtower.enable=true"
-    network_mode: none
-    restart: unless-stopped
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-
-  dockerproxy:
-    container_name: ${COMPOSE_PROJECT_NAME}_dockerproxy
-    depends_on:
-      - watchtower
-    image: tecnativa/docker-socket-proxy
-    restart: unless-stopped
-    environment:
-      CONTAINERS: 1
-    labels:
-      - "com.centurylinklabs.watchtower.enable=true"
-    networks:
-      - traefik
-    expose:
-      - "2375"
-    volumes:
-      - "/var/run/docker.sock:/var/run/docker.sock"
-
   gunicorn:
     # "image" here overrides build: in docker-compose.yml, unless --build is passed :)
     image: durhamarc/manyfews-gunicorn:latest
+    restart: unless-stopped
+    volumes:
+      - app:/app/
 
   celery:
     image: durhamarc/manyfews-celery:latest
+    restart: unless-stopped
+    volumes:
+      - app:/app/
+    command:
+      - "celery -A manyfews worker -l INFO --scheduler django_celery_beat.schedulers:DatabaseScheduler -E"
 
   celery_beat:
     image: durhamarc/manyfews-celery:latest
+    restart: unless-stopped
+    volumes:
+      - app:/app/
 
   web:
     image: durhamarc/manyfews-web:latest
+    restart: unless-stopped
     labels:
       - "traefik.enable=true"
-      - "traefik.docker.network=${COMPOSE_PROJECT_NAME}_traefik"
+      - "traefik.docker.network=traefik_traefik"
       - "traefik.http.routers.web-http.entrypoints=http"
       - "traefik.http.routers.web-http.rule=Host(`${DOMAIN}`)"
       - "traefik.http.routers.web-http.middlewares=httpsRedirect@file"
@@ -98,8 +46,16 @@ services:
       - backend
       - traefik
 
+
 networks:
-  traefik: 
+  traefik:
+    name: traefik_traefik
+    external: true
 
 volumes:
-  traefik:
+  app:
+    driver_opts:
+      type: none
+      device: ${PWD}/manyfews/
+      o: bind
+
