--- a/.github/workflows/run_unitTest_GenerateRiverFlows.yml
+++ b/.github/workflows/run_unitTest_GenerateRiverFlows.yml
@@ -29,7 +29,8 @@ jobs:
       -
         name: Install dependencies
         run: |
-          sudo apt-get install binutils libproj-dev gdal-bin
+          sudo apt-get update
+          sudo apt-get install -y binutils libproj-dev gdal-bin
 
       -
         name: Cache Miniconda environment
